fixed About page spacing

--- a/metronome/src/components/FoundingTeam/FoundingTeam.module.css
+++ b/metronome/src/components/FoundingTeam/FoundingTeam.module.css
@@ -8,6 +8,7 @@
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
+      margin-top: 50px; /* to give space for Nav Bar */
    }
 }
 
@@ -19,6 +20,7 @@
       flex-wrap: wrap;
       align-items: flex-start;
       justify-content: center;
+      margin-top: 50px; /* to give space for Nav Bar */
    }
 
    .absolute {
@@ -28,6 +30,10 @@
 
    .opacity {
       opacity: 0.1;
+   }
+
+   .founderbody {
+      margin-top: 15%;
    }
 }
 
@@ -42,4 +48,8 @@
    position: relative;
    padding: 10px;
    max-width: 320px;
+}
+
+.founderbody {
+   margin-top: 50px;
 }
